--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="index.css" rel="stylesheet" type="text/css"/>
-        <img src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"/>
+        <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"><script/>
     </head>
     <body>
 
