--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Module 1</title>
+        <title>MyceniaCraft</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
        # <link href="index.css" rel="stylesheet" type="text/css"/>
