--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="The Page 1 description">
     <meta name="theme-color" content="#fdb800">
-    <meta name="author" content="Azuriom">
+    <meta name="author" content="MyceniaCraft">
         <meta property="og:title" content="Page 1">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://demo.azuriom.com/page-1">
     <meta property="og:image" content="https://demo.azuriom.com/storage/img/logo.png">
     <meta property="og:description" content="The Page 1 description">
-    <meta property="og:site_name" content="Azuriom">
+    <meta property="og:site_name" content="MyceniaCraft">
         <meta name="keywords" content="azuriom, minecraft, cms, free, open source, laravel">
 
     <!-- CSRF Token -->
     <meta name="csrf-token" content="hRhjuKgFH2qFSAA1bUTWwzLVrvybXL8OyWpLTgwi">
 
-    <title>Page 1 | Azuriom</title>
+    <title>Page 1 | MyceniaCraft</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="https://demo.azuriom.com/storage/img/logo.png">
@@ -37,7 +37,7 @@
         height: auto;
     }
 
-    .azuriom-theme-selector {
+    .MyceniaCraft-theme-selector {
         position: fixed;
         top: 0;
         right: 15px;
@@ -52,11 +52,11 @@
         Text-decoration: none;
     }
 
-    .azuriom-theme-selector .dropdown-toggle::before {
+    .MyceniaCraft-theme-selector .dropdown-toggle::before {
         display: none!important;
     }
 
-    .azuriom-theme-selector svg {
+    .MyceniaCraft-theme-selector svg {
         vertical-align: -.125em;
         display: inline-block;
         height: 1em;
