--- a/index.html
+++ b/index.html
@@ -103,28 +103,28 @@
         <div class="container navigation-content">
             <ul class="header-nav-top-left">
                                                                                         <li class="item ">
-                                <a class="d-flex" href="https://demo.azuriom.com"
+                                <a class="d-flex" href="https://mathigame-fr.github.io/"
                                     >
                                     <i class="bi bi-house me-2"></i>
                                      Home
                                 </a>
                             </li>
                                                                                                                                     <li class="item ">
-                                <a class="d-flex" href="https://demo.azuriom.com/page-1"
+                                <a class="d-flex" href="https://mathigame-fr.github.io/"
                                     >
                                     <i class="bi bi-file-earmark me-2"></i>
                                      Page
                                 </a>
                             </li>
                                                                                                                                     <li class="item ">
-                                <a class="d-flex" href="https://demo.azuriom.com/forum"
+                                <a class="d-flex" href="https://mathigame-fr.github.io/"
                                     >
                                     <i class="bi bi-chat-dots me-2"></i>
                                      Forum
                                 </a>
                             </li>
                                                                                                                                     <li class="item ">
-                                <a class="d-flex" href="https://demo.azuriom.com/vote"
+                                <a class="d-flex" href="https://mathigame-fr.github.io/"
                                     >
                                     <i class="bi bi-star me-2"></i>
                                      Vote
