--- a/index.html
+++ b/index.html
@@ -178,19 +178,19 @@
         <div class="container" style="position: relative">
             <div class="header-content-mid">
                 <div class="description">
-                                                                                                <div class="copy-ip address_copy" data-text="mc.hypixel.net"
+                                                                                                <div class="copy-ip address_copy" data-text="mc.myceniacraft.net"
                             data-copied-text="ip has been copied"
                             data-copy-text="copy server ip">
                             <p class="ip">
-                                mc.hypixel.net
+                                mc.myceniacraft.net
                             </p>
                             <p class="info">copy server ip</p>
                             </div>
-                                                                                                        <div class="copy-ip address_copy" data-text="play.cubecraft.net"
+                                                                                                        <div class="copy-ip address_copy" data-text="play.myceniacraft.net"
                             data-copied-text="ip has been copied"
                             data-copy-text="copy server ip">
                             <p class="ip">
-                                play.cubecraft.net
+                                play.myceniaCraft.net
                             </p>
                             <p class="info">copy server ip</p>
                             </div>
