--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 </li>
                                     <li class="item">
                         <a href="https://demo.azuriom.com/user/register">
-                            Register
+                            Home
                         </a>
                     </li>
                                     </ul>
