--- a/index.html
+++ b/index.html
@@ -259,43 +259,43 @@
                     </li>
 
                                     <li class="item ">
-                    <a href="https://demo.azuriom.com"
+                    <a href=""
                         >
                         <span class="name"><i class="bi bi-house"></i> Home</span>
                     </a>
                 </li>
                                                 <li class="item ">
-                    <a href="https://demo.azuriom.com/page-1"
+                    <a href=""
                         >
                         <span class="name"><i class="bi bi-file-earmark"></i> Page</span>
                     </a>
                 </li>
                                                 <li class="item ">
-                    <a href="https://demo.azuriom.com/forum"
+                    <a href=""
                         >
                         <span class="name"><i class="bi bi-chat-dots"></i> Forum</span>
                     </a>
                 </li>
                                                 <li class="item ">
-                    <a href="https://demo.azuriom.com/vote"
+                    <a href=""
                         >
                         <span class="name"><i class="bi bi-star"></i> Vote</span>
                     </a>
                 </li>
                                                 <li class="item  active ">
-                    <a href="https://demo.azuriom.com/shop"
+                    <a href=""
                         >
                         <span class="name"><i class="bi bi-cart"></i> Shop</span>
                     </a>
                 </li>
                                                 <li class="item ">
-                    <a href="https://demo.azuriom.com/faq"
+                    <a href=""
                         >
                         <span class="name"><i class="bi bi-info-circle"></i> FAQ</span>
                     </a>
                 </li>
                                                 <li class="item ">
-                    <a href="https://demo.azuriom.com/support/tickets"
+                    <a href=""
                         >
                         <span class="name"><i class="bi bi-question-circle"></i> Support</span>
                     </a>
@@ -307,21 +307,21 @@
                     </a>
                     <div class="dropdown-menu m-auto" aria-labelledby="navbarDropdown14">
                                                     <a class="dropdown-item "
-                                href="https://demo.azuriom.com/wiki"
+                                href=""
                                 ><i class="bi bi-book"></i> Wiki</a>
                                                     <a class="dropdown-item "
-                                href="https://azuriom.com/"
+                                href=""
                                  target="_blank" rel="noopener noreferrer" >Azuriom</a>
                                             </div>
                 </li>
                                         <li class="item">
-                <a href="https://demo.azuriom.com/user/login">
+                <a href="index.CSS">
                     <span class="name">Login</span>
                 </a>
             </li>
 
                             <li class="item">
-                    <a href="https://demo.azuriom.com/user/register">
+                    <a href="">
                         <span class="name">Register</span>
                     </a>
                 </li>
