--- a/index.html
+++ b/index.html
@@ -133,24 +133,24 @@
                                                                                                                                                                                                                         </ul>
             <ul class="header-nav-top-mid">
                 <li class="item">
-                                            <img src="https://demo.azuriom.com/storage/img/logo.png" alt="Logo">
+                                            <img src="" alt="Logo">
                                     </li>
             </ul>
             <ul class="header-nav-top-right">
                                                                                                                                                                                                                                         <li class="item  active ">
-                                <a href="https://demo.azuriom.com/shop"
+                                <a href=""
                                     >
                                                                         <i class="bi bi-cart"></i> Shop
                                 </a>
                             </li>
                                                                                                                                     <li class="item ">
-                                <a href="https://demo.azuriom.com/faq"
+                                <a href=""
                                     >
                                                                         <i class="bi bi-info-circle"></i> FAQ
                                 </a>
                             </li>
                                                                                                                                     <li class="item ">
-                                <a href="https://demo.azuriom.com/support/tickets"
+                                <a href=""
                                     >
                                                                         <i class="bi bi-question-circle"></i> Support
                                 </a>
@@ -163,10 +163,10 @@
                                 <div class="dropdown-menu dropdown-menu-right"
                                     aria-labelledby="navbarDropdown14">
                                                                             <a class="dropdown-item "
-                                            href="https://demo.azuriom.com/wiki"
+                                            href=""
                                             ><i class="bi bi-book"></i> Wiki</a>
                                                                             <a class="dropdown-item "
-                                            href="https://azuriom.com/"
+                                            href=""
                                              target="_blank" rel="noopener noreferrer" >Azuriom</a>
                                                                     </div>
                             </li>
@@ -235,12 +235,12 @@
 
         <ul class="header-nav-bottom-right">
                             <li class="item">
-                    <a href="https://demo.azuriom.com/user/login">
+                    <a href="">
                         Login
                     </a>
                 </li>
                                     <li class="item">
-                        <a href="https://demo.azuriom.com/user/register">
+                        <a href="">
                             Home
                         </a>
                     </li>
