--- a/index.html
+++ b/index.html
@@ -138,19 +138,19 @@
             </ul>
             <ul class="header-nav-top-right">
                                                                                                                                                                                                                                         <li class="item  active ">
-                                <a href=""
+                                <a href="https://mathigame-fr.github.io/"
                                     >
                                                                         <i class="bi bi-cart"></i> Shop
                                 </a>
                             </li>
                                                                                                                                     <li class="item ">
-                                <a href=""
+                                <a href="https://mathigame-fr.github.io/"
                                     >
                                                                         <i class="bi bi-info-circle"></i> FAQ
                                 </a>
                             </li>
                                                                                                                                     <li class="item ">
-                                <a href=""
+                                <a href="https://mathigame-fr.github.io/"
                                     >
                                                                         <i class="bi bi-question-circle"></i> Support
                                 </a>
@@ -259,43 +259,43 @@
                     </li>
 
                                     <li class="item ">
-                    <a href=""
+                    <a href="https://mathigame-fr.github.io/"
                         >
                         <span class="name"><i class="bi bi-house"></i> Home</span>
                     </a>
                 </li>
                                                 <li class="item ">
-                    <a href=""
+                    <a href="https://mathigame-fr.github.io/"
                         >
                         <span class="name"><i class="bi bi-file-earmark"></i> Page</span>
                     </a>
                 </li>
                                                 <li class="item ">
-                    <a href=""
+                    <a href="https://mathigame-fr.github.io/"
                         >
                         <span class="name"><i class="bi bi-chat-dots"></i> Forum</span>
                     </a>
                 </li>
                                                 <li class="item ">
-                    <a href=""
+                    <a href="https://mathigame-fr.github.io/"
                         >
                         <span class="name"><i class="bi bi-star"></i> Vote</span>
                     </a>
                 </li>
                                                 <li class="item  active ">
-                    <a href=""
+                    <a href="https://mathigame-fr.github.io/"
                         >
                         <span class="name"><i class="bi bi-cart"></i> Shop</span>
                     </a>
                 </li>
                                                 <li class="item ">
-                    <a href=""
+                    <a href="https://mathigame-fr.github.io/"
                         >
                         <span class="name"><i class="bi bi-info-circle"></i> FAQ</span>
                     </a>
                 </li>
                                                 <li class="item ">
-                    <a href=""
+                    <a href="https://mathigame-fr.github.io/"
                         >
                         <span class="name"><i class="bi bi-question-circle"></i> Support</span>
                     </a>
@@ -307,10 +307,10 @@
                     </a>
                     <div class="dropdown-menu m-auto" aria-labelledby="navbarDropdown14">
                                                     <a class="dropdown-item "
-                                href=""
+                                href="https://mathigame-fr.github.io/"
                                 ><i class="bi bi-book"></i> Wiki</a>
                                                     <a class="dropdown-item "
-                                href=""
+                                href="https://mathigame-fr.github.io/"
                                  target="_blank" rel="noopener noreferrer" >Azuriom</a>
                                             </div>
                 </li>
@@ -321,7 +321,7 @@
             </li>
 
                             <li class="item">
-                    <a href="">
+                    <a href="https://mathigame-fr.github.io/">
                         <span class="name">Register</span>
                     </a>
                 </li>
