--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
                                 <div class="dropdown-menu dropdown-menu-right"
                                     aria-labelledby="navbarDropdown14">
                                                                             <a class="dropdown-item "
-                                            href=""
+                                            href="https://mathigame-fr.github.io/"
                                             ><i class="bi bi-book"></i> Wiki</a>
                                                                             <a class="dropdown-item "
-                                            href=""
-                                             target="_blank" rel="noopener noreferrer" >Azuriom</a>
+                                            href="https://mathigame-fr.github.io/"
+                                             target="_blank" rel="noopener noreferrer" >MyceniaCraft</a>
                                                                     </div>
                             </li>
                                                                         </ul>
@@ -200,13 +200,7 @@
         </div>
     </div>
 
-    <div class="header-nav-bottom sub-navigation container mb-4">
-        <ul class="header-nav-bottom-left">
-            <li class="item">
-                <div class="online">
-                                                                        <p><span>170</span>
-                                online players !</p>
-                                                            </div>
+
             </li>
         </ul>
 
