--- a/index.html
+++ b/index.html
@@ -35,37 +35,7 @@
 
     <!-- Page level scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
-    <style>
-    img {
-        max-width: 100%;
-        height: auto;
-    }
 
-    .azuriom-theme-selector {
-        position: fixed;
-        top: 0;
-        right: 15px;
-        z-index: 9999999999;
-        background: #fff;
-        box-shadow: grey 0 0 5px;
-        border-radius: 3px;
-        cursor: pointer;
-    }
-
-    #dropdownMenuButton {
-        Text-decoration: none;
-    }
-
-    .azuriom-theme-selector .dropdown-toggle::before {
-        display: none!important;
-    }
-
-    .azuriom-theme-selector svg {
-        vertical-align: -.125em;
-        display: inline-block;
-        height: 1em;
-    }
-</style>
 
 <script src="https://cdn.jsdelivr.net/npm/js-cookie@2.2.1/src/js.cookie.min.js" defer></script>
 <script src="https://demo.azuriom.com/assets/plugins/demo/js/demo.js?v1.0" defer></script>
@@ -79,16 +49,6 @@
 
     <link href="https://demo.azuriom.com/assets/themes/darkmoon/css/style.css?v1.1.2?v=1.0.2" rel="stylesheet">
 
-            <style>
-                :root {
-            --theme-color: #5127af;
-            --theme-color-hover: #774cd7;
-             
-            --theme-color-text: black;
-                    }
-
-    
-    </style>
 </head>
 
 <body data-bs-theme="dark">
@@ -116,21 +76,7 @@
                                      Page
                                 </a>
                             </li>
-                                                                                                                                    <li class="item ">
-                                <a class="d-flex" href="https://mathigame-fr.github.io/"
-                                    >
-                                    <i class="bi bi-chat-dots me-2"></i>
-                                     Forum
-                                </a>
-                            </li>
-                                                                                                                                    <li class="item ">
-                                <a class="d-flex" href="https://mathigame-fr.github.io/"
-                                    >
-                                    <i class="bi bi-star me-2"></i>
-                                     Vote
-                                </a>
-                            </li>
-                                                                                                                                                                                                                        </ul>
+                                                                                                                                                     <li class="item ">                                                                                                                                                                                        </ul>
             <ul class="header-nav-top-mid">
                 <li class="item">
                                             <img src="" alt="Logo">
