--- a/index.html
+++ b/index.html
@@ -12,43 +12,10 @@
     <meta property="og:url" content="https://demo.azuriom.com/shop/categories/1">
     <meta property="og:image" content="https://demo.azuriom.com/storage/img/logo.png">
     <meta property="og:description" content="The Azuriom&#039;s demo !!">
-    <meta property="og:site_name" content="Azuriom">
-        <meta name="keywords" content="azuriom, minecraft, cms, free, open source, laravel">
+    <meta property="og:site_name" content="MyceniaCraft">
+        <meta name="keywords" content="French">
 
-    <!-- CSRF Token -->
-    <meta name="csrf-token" content="hRhjuKgFH2qFSAA1bUTWwzLVrvybXL8OyWpLTgwi">
-
-    <title>Ranks | Azuriom</title>
-
-    <!-- Favicon -->
-    <link rel="shortcut icon" href="https://demo.azuriom.com/storage/img/logo.png">
-
-    <!-- Scripts -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js" defer integrity="sha512-uto9mlQzrs59VwILcLiRYeLKPPbS/bT71da/OEBYEwcdNUk8jYIy+D176RYoop1Da+f9mvkYrmj5MCLZWEtQuA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://demo.azuriom.com/assets/vendor/bootstrap/js/bootstrap.bundle.min.js?v1.1.2" defer></script>
-    <script src="https://demo.azuriom.com/assets/vendor/axios/axios.min.js?v1.1.2" defer></script>
-        <script src="https://demo.azuriom.com/assets/js/script.js?v1.1.2" defer></script>
-    <script src="https://demo.azuriom.com/assets/themes/darkmoon/js/navigation.js?v1.1.2" defer></script>
-    <script src="https://demo.azuriom.com/assets/themes/darkmoon/js/clipboard.js?v1.1.2" defer></script>
-    <script src="https://demo.azuriom.com/assets/themes/darkmoon/js/SmoothScroll.js?v1.1.2" defer></script>
-
-    <!-- Page level scripts -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
-
-
-<script src="https://cdn.jsdelivr.net/npm/js-cookie@2.2.1/src/js.cookie.min.js" defer></script>
-<script src="https://demo.azuriom.com/assets/plugins/demo/js/demo.js?v1.0" defer></script>
-    <!-- Fonts -->
-    <link rel="dns-prefetch" href="//fonts.gstatic.com">
-    <link href="https://fonts.bunny.net/css?family=Rubik&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://demo.azuriom.com/assets/vendor/bootstrap-icons/bootstrap-icons.css?v1.1.2">
-
-    <!-- Styles -->
-    <link href="https://demo.azuriom.com/assets/vendor/bootstrap/css/bootstrap.min.css?v1.1.2" rel="stylesheet">
-
-    <link href="https://demo.azuriom.com/assets/themes/darkmoon/css/style.css?v1.1.2?v=1.0.2" rel="stylesheet">
-
+ 
 </head>
 
 <body data-bs-theme="dark">
