--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="The Azuriom&#039;s demo !!">
     <meta name="theme-color" content="#3490DC">
-    <meta name="author" content="Azuriom">
+    <meta name="author" content="MyceniaCraft">
 
-    <meta property="og:title" content="Ranks">
+    <meta property="og:title" content="MyceniaCraft">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://demo.azuriom.com/shop/categories/1">
     <meta property="og:image" content="https://demo.azuriom.com/storage/img/logo.png">
