--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="The Azuriom&#039;s demo !!">
     <meta name="theme-color" content="#3490DC">
-    <meta name="author" content="MyceniaCraft">
+    <meta name="author" content="Azuriom">
 
     <meta property="og:title" content="MyceniaCraft">
     <meta property="og:type" content="website">
