--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   gtag('config', 'UA-155264314-1');
 </script>
 	<title>SWorld - Accueil</title>
-	<meta name="description" content="IP 'play.SWorld.fr'.">
+	<meta name="description" content="IP 'play.MyceniaCraft.fr'.">
 	<meta name="keywords" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
@@ -21,7 +21,7 @@
 		</div>
 		<div class="playercount">	
 				
-			</span></p>      <p>Rejoignez-nous sur : <span>play.sworld.fr</span></p>
+			</span></p>      <p>Rejoignez-nous sur : <span>play.MyceniaCraft.fr</span></p>
 		</div>
 
 		<div class="items">
@@ -40,7 +40,7 @@
 			</div>
 			
             <div class="item discord">
-				<a href="https://discordapp.com/invite/exemple"><img src="img/discord.png" alt="Seaworld discord icon" style="width:190px;height:215px; class="img"></a>
+				<a href="https://discord.gg/PdZTNzWj8C"><img src="img/discord.png" alt="Seaworld discord icon" style="width:190px;height:215px; class="img"></a>
 			</div>
 
 		</div>
