--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-	<title>SWorld - Accueil</title>
+	<title>MyceniaCraft - Accueil</title>
 	<meta name="description" content="IP 'play.MyceniaCraft.fr'.">
 	<meta name="keywords" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
