--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div class="items">
 		
 			<div class="item banlist">
-				<a href="http://banlist.sworlds.fr/"><img src="img/banlist.png" alt="Seaworld banlist icon" style="width:190px;height:215px; class="img"></a>
+				<a href="https://mathigame-fr.github.io/banlist"><img src="img/banlist.png" alt="Seaworld banlist icon" style="width:190px;height:215px; class="img"></a>
 
 			</div>
 
