--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 			</div>
 
 			<div class="item store">
-				<a href="http://shop.sworlds.fr/"><img src="img/store.png" alt="Seaworld store icon" style="width:190px;height:215px; class="img"></a>
+				<a href="shop.html"><img src="img/store.png" alt="Seaworld store icon" style="width:190px;height:215px; class="img"></a>
 			</div>
 
 			<div class="item vote">
-				<a href="http://vote.sworlds.fr/vote"><img src="img/vote.png" alt="Seaworld voting icon" style="width:190px;height:215px; class="img"></a>
+				<a href="votes.html"><img src="img/vote.png" alt="Seaworld voting icon" style="width:190px;height:215px; class="img"></a>
 			</div>
 			
             <div class="item discord">
