--- a/banlist.html
+++ b/banlist.html
@@ -1,3 +1,4 @@
+<link rel="banlist" type="text/css" href="css/banlist.css">
 <html lang="fr">
 <head>
     
@@ -10,13 +11,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
    
-<title>Exemple de tableau</title>
+<title>Tableau des bannis</title>
 
 </
 </head>
 <body>
 
-<h2>Mon Tableau</h2>
+<h2>Tableau des bannis</h2>
 
 <table border="1">
     <tr>
