--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 
 	<title>MyceniaCraft - Accueil</title>
-	<meta name="description" content="IP 'play.MyceniaCraft.fr'.">
+	<meta name="description" content="IP play.MyceniaCraft.fr.">
 	<meta name="keywords" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
