--- a/banlist.html
+++ b/banlist.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <link rel="banlist" type="text/css" href="css/banlist.css">
-    
+    <link rel="icon" type="image/png" href="img/1572179150-sworld.png">
 
  
 <meta charset="UTF-8">
