--- a/votes.html
+++ b/votes.html
@@ -1,1 +1,14 @@
-Votes 
+<html>
+<head>
+
+	<title>MyceniaCraft - Accueil</title>
+	<meta name="description" content="IP play.MyceniaCraft.fr.">
+	<meta name="keywords" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="css/vote.css">
+   <link rel="icon" type="image/png" href="img/1572179150-sworld.png">
+</head>
+<body>
+<h1>Vote </h1> 
+</body>
