--- a/votes.html
+++ b/votes.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-	<title>MyceniaCraft - Accueil</title>
+	<title>MyceniaCraft - Vote</title>
 	<meta name="description" content="IP play.MyceniaCraft.fr.">
 	<meta name="keywords" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,5 +10,5 @@
    <link rel="icon" type="image/png" href="img/1572179150-sworld.png">
 </head>
 <body>
-<h1>Vote </h1> 
+<h1>Vote</h1> 
 </body>
