--- a/shop.html
+++ b/shop.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-	<title>MyceniaCraft - Accueil</title>
+	<title>MyceniaCraft - Shop</title>
 	<meta name="description" content="IP play.MyceniaCraft.fr.">
 	<meta name="keywords" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
