--- a/banlist.html
+++ b/banlist.html
@@ -1,7 +1,7 @@
 
 <html lang="fr">
 <head>
-    <link rel="banlist" type="text/css" href="css/banlist.css">
+    <link rel="stylesheet" type="text/css" href="css/banlist.css">
     <link rel="icon" type="image/png" href="img/1572179150-sworld.png">
 
  
