--- a/shop.html
+++ b/shop.html
@@ -11,11 +11,13 @@
 </head>
 <body>
 <h1>Boutique en ligne </h1> 
+<div class=container>
 <p> Grades sur le serveur </p>
 <ul style="list=style-type:circle">
 <li> Grades Magiciens </li>
 <li> Grades Sorciers</li>
 <li> Grades  Maître</li>
 <li> Grades Archimages </li>
+</div>
 </ul>
 </body>
