--- a/shop.html
+++ b/shop.html
@@ -8,6 +8,8 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/boutique.css">
    <link rel="icon" type="image/png" href="img/1572179150-sworld.png">
+
+<a href="index.html"><img src="" ></a>
 </head>
 <body>
 <h1>Boutique en ligne </h1> 
