--- a/shop.html
+++ b/shop.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/boutique.css">
    <link rel="icon" type="image/png" href="img/1572179150-sworld.png">
 
-<a href="index.html"><img src="" ></a>
+<a href="index.html"><img src="img/1572179150-sworld.png" ></a>
 </head>
 <body>
 <h1>Boutique en ligne </h1> 
