--- a/votes.html
+++ b/votes.html
@@ -11,4 +11,29 @@
 </head>
 <body>
 <h1>Vote</h1> 
+<table border="1" class=center>
+    <tr>
+<th>Sites</th>
+<th>Temps</th>
+        <th>Récompenses</th>
+    </tr>
+    <tr>
+<td>Sites n°1</td>
+<td>6 Heures</td>
+        <td>Clés votes x3 </td>
+    </tr>
+    <tr>
+        <td>Sites n°2</td>
+        <td>12 Heures</td>
+<td>Clé Sorcier x1</td>
+    </tr>
+    <tr>
+        <td>Sites n°3</td>
+        <td>24 Heures</td>
+        <td>Clé GrandMage x1 + 10 MyceCoins</td>
+    </tr>
+</table>
+
+
 </body>
+</html>
