--- a/votes.html
+++ b/votes.html
@@ -10,6 +10,8 @@
    <link rel="icon" type="image/png" href="img/1572179150-sworld.png">
 </head>
 <body>
+	<a href="index.html"><img src="img/1572179150-sworld.png" ></a>
+
 <h1>Vote</h1> 
 <table border="1" class=center>
     <tr>
