--- a/banlist.html
+++ b/banlist.html
@@ -27,19 +27,19 @@
         <th>Raison</th>
     </tr>
     <tr> 
-<td>Xx_Pro_xX</td>
+<td>MrIronkull</td>
 <td>7 Jours</td>
-        <td>Cheat</td>
+        <td>Utilisation de Usebug</td>
     </tr>
     <tr>
-        <td>MrSavage</td>
+        <td>Lakoue</td>
         <td>30 Jours</td>     
-<td>Macro</td>
+<td>Non respect du règlement consernant le serveur</td>
     </tr>
     <tr>
-        <td>Pdasai</td>
-        <td>15 Minutes</td>
-        <td>XRay</td>
+        <td>Juoil</td>
+        <td>3 Jour</td>
+        <td>Utilisation de cheat</td>
     </tr>
 </table>
 
